--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Neale Philippe Portfolio</title>
-        <link rel="stylesheet" href="styleportfile.css"
+        <link rel="stylesheet" href="./styleportfile.css"
       </head>
 <header>
     <div class="header">
@@ -25,7 +25,7 @@
 </header>
     <body>
         <div class="container">
-            <img src="../Downloads/header image(1024 × 768 px).png" alt="hand pointing to different elements" style="width:100%; height: 800px;">
+            <img src="./header image(1024 × 768 px).png" alt="hand pointing to different elements" style="width:100%; height: 800px;">
             <div class="top-right">"INNOVATING WEB DEVELOPMENT"</div>
         </div>
     </div>
@@ -50,7 +50,7 @@
                 <img src="./horiseon.png" alt="Picture of website with meeting" style="column-rule-color: whitesmoke; width: 100%; height: 300px;">
                 </a></p>
                 <p><a href="https://neale2021.github.io/prework-about-me/">
-                    <img src="preworkabout me.png" alt="Picture of website with my name Neale Philippe" style="width: 60%; height: 200px;">
+                    <img src="./preworkabout me.png" alt="Picture of website with my name Neale Philippe" style="width: 60%; height: 200px;">
                     </a></p> 
             </div>
           </div>
